--- a/research/research.html
+++ b/research/research.html
@@ -165,7 +165,7 @@ D. Núñez-Fernández, B. Kwolek. ‘Hand Posture Recognition Using Convolutiona
 
 
 <div id="footer">
-<div class="left">© 2013–2020 Dennis Hernando Núñez Fernández <br/>  <!-- </div> 
+<div>© 2013–2020 Dennis Hernando Núñez Fernández <br/>  <!-- </div> 
 <div class="clearer">&nbsp;</div>
 </div>
 
@@ -176,8 +176,8 @@ D. Núñez-Fernández, B. Kwolek. ‘Hand Posture Recognition Using Convolutiona
 </div>
 
 </body></html> -->
-<a href="https://dennishnf.com/README.html" target="_blank">Made from scratch - Python as backend - Powered by Linux</a> <br/>
-Website updated 05-03-2021 22:45 GMT <br/> 
+<a href="https://dennishnf.com/README.html" target="_blank">Made from scratch with Python - Powered by Linux</a> <br/>
+Website updated 05-03-2021 22:51 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
