--- a/post.html
+++ b/post.html
@@ -8,7 +8,7 @@
 
 
 <div id="footer">
-<div class="left">© 2013–2020 Dennis Hernando Núñez Fernández <br/>  <!-- </div> 
+<div>© 2013–2020 Dennis Hernando Núñez Fernández <br/>  <!-- </div> 
 <div class="clearer">&nbsp;</div>
 </div>
 
