--- a/research/research.html
+++ b/research/research.html
@@ -176,8 +176,8 @@ D. Núñez-Fernández, B. Kwolek. ‘Hand Posture Recognition Using Convolutiona
 </div>
 
 </body></html> -->
-<a href="https://dennishnf.com/README.html" target="_blank">Made from scratch with Python - Powered by Linux</a> <br/>
-Website updated 2021-03-05, at 22:53 GMT <br/> 
+<a href="https://dennishnf.com/README.html" target="_blank">Made from scratch with Python. Powered by Linux</a> <br/>
+Website updated 2021-03-05, at 22:54 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
