--- a/research/research.html
+++ b/research/research.html
@@ -165,7 +165,7 @@ D. Núñez-Fernández, B. Kwolek. ‘Hand Posture Recognition Using Convolutiona
 
 
 <div id="footer">
-<div>© 2013–2020 Dennis Hernando Núñez Fernández <br/>  <!-- </div> 
+<div class="column">© 2013–2020 Dennis Hernando Núñez Fernández <br/>  <!-- </div> 
 <div class="clearer">&nbsp;</div>
 </div>
 
@@ -177,7 +177,7 @@ D. Núñez-Fernández, B. Kwolek. ‘Hand Posture Recognition Using Convolutiona
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">Made from scratch with Python. Powered by Linux</a> <br/>
-Website updated 2021-03-05, at 23:02 GMT <br/> 
+Website updated 2021-03-05, at 23:03 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
