--- a/research/research.html
+++ b/research/research.html
@@ -165,7 +165,7 @@ D. Núñez-Fernández, B. Kwolek. ‘Hand Posture Recognition Using Convolutiona
 
 
 <div id="footer">
-<div class="column">© 2013–2020 Dennis Hernando Núñez Fernández <br/>  <!-- </div> 
+<div class="left">© 2013–2020 Dennis Núñez Fernández <br/>  <!-- </div> 
 <div class="clearer">&nbsp;</div>
 </div>
 
@@ -177,7 +177,7 @@ D. Núñez-Fernández, B. Kwolek. ‘Hand Posture Recognition Using Convolutiona
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">Made from scratch - Python as backend</a> <br/>
-Website updated 2021-03-05 23:07 GMT <br/> 
+Website updated 2021-03-05 23:08 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
