--- a/research/research.html
+++ b/research/research.html
@@ -176,7 +176,7 @@ D. Núñez-Fernández, B. Kwolek. ‘Hand Posture Recognition Using Convolutiona
 </div>
 
 </body></html> -->
-<a href="https://dennishnf.com/README.html" target="_blank">Made from scratch - Python as backend d dd</a> <br/>
+<a href="https://dennishnf.com/README.html" target="_blank">From scratch by Python - Powered by Linux</a> <br/>
 Website updated 2021-03-05  23:29 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
