--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ I have participated in prestigious AI related conferences such as the NeurIPS (<
 
 
 <div id="footer">
-<div class="left">© 2013–2020 Dennis Núñez Fernández <br/>  <!-- </div> 
+<div class="left">© 2013–2020 Dennis H. Núñez Fernández <br/>  <!-- </div> 
 <div class="clearer">&nbsp;</div>
 </div>
 
@@ -213,7 +213,7 @@ I have participated in prestigious AI related conferences such as the NeurIPS (<
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch by Python - Powered by Linux</a> <br/>
-Website updated 2021-03-05  23:33 GMT <br/> 
+Website updated 2021-03-05  23:34 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
