--- a/research/research.html
+++ b/research/research.html
@@ -165,7 +165,7 @@ D. Núñez-Fernández, B. Kwolek. ‘Hand Posture Recognition Using Convolutiona
 
 
 <div id="footer">
-<div class="left">© 2013–2020 Dennis Núñez Fernández <br/>  <!-- </div> 
+<div class="left">© 2013–2020 Dennis H. Núñez Fernández <br/>  <!-- </div> 
 <div class="clearer">&nbsp;</div>
 </div>
 
@@ -177,7 +177,7 @@ D. Núñez-Fernández, B. Kwolek. ‘Hand Posture Recognition Using Convolutiona
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch by Python - Powered by Linux</a> <br/>
-Website updated 2021-03-05  23:33 GMT <br/> 
+Website updated 2021-03-05  23:34 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
