--- a/README.html
+++ b/README.html
@@ -121,7 +121,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch by Python. Powered by Linux</a> <br/>
-Website updated 2021-03-05  23:45 GMT <br/> 
+Website updated: 2021-03-05  23:45 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
