--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ I have participated in prestigious AI related conferences such as the NeurIPS (<
 <li>2020/03 - Included as a program committee member (reviewer) for the IEEE INTERCON 2020.</li>
 <li>2020/03 - <a href="https://cmmrs.mpi-sws.org/" target="_blank">Accepted to participate in the CMMRS 2020: the Cornell, Maryland, Max Planck Pre-doctoral School</a>.</li>
 <li>2020/03 - <a href="https://picampus-school.com/programme/school-of-ai/" target="_blank">Glad to obtain a fellowship for the School of AI programme 2020, hosted by Pi School</a>.</li>
-<li>2020/01 - <a href="http://ailatinsum.mit.edu/" target="_blank">Selected and winner of a travel grant to the AI Latin America SumMIT, event held at the MIT Media Lab</a>.</li>
+<li>2020/01 - <a href="http://ailatinsum.mit.edu/" target="_blank">Selected and winner of a travel grant to the AI Latin America SumMIT, held at the MIT Media Lab</a>.</li>
 <li>2019/11 - <a href="http://vimp.math.unipd.it/people.html" target="_blank">Winner of a scholarship by Fondecyt Peru for a research stay at the University of Padua, Italy</a>.</li>
 <li>2019/11 - Glad to give a talk on AI in Healtcare at the department of Pharmacy and Biochemistry, at the UNMSM.</li>
 <li>2019/10 - <a href="https://www.latinxinai.org/neurips-2019" target="_blank">Winner of the LXAI travel grant to participate in the prestigious NeurIPS 2019</a>.</li>
@@ -213,7 +213,7 @@ I have participated in prestigious AI related conferences such as the NeurIPS (<
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch by Python. Powered by Linux</a> <br/>
-Website updated: 2021-03-06  21:08 GMT <br/> 
+Website updated: 2021-03-06  21:09 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
