--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ I have participated in prestigious AI related conferences such as the NeurIPS (<
 <li>2020/06 - <a href="https://www.latinxinai.org/icml-2020" target="_blank">Grateful to have been accepted as a mentee in the LXAI Mentoring Program at ICML 2020</a>.</li>
 <li>2020/06 - <a href="https://roboticsconference.org/2020/" target="_blank">Glad to obtain a grant for the Robotics: Science and Systems (RSS) 2020 conference</a>.</li>
 <li>2020/05 - <a href="https://www.latinxinai.org/icml-2020#workshop-org" target="_blank">Selected as program committee member (reviewer) for the LXAI Workshop at the ICML 2020</a>.</li>
-<li>2020/05 - <a href="http://lxmls.it.pt/2020/" target="_blank">Selected to participate in the Lisbon Machine Learning School (LxMLS 2020)</a>.</li>
+<li>2020/05 - <a href="http://lxmls.it.pt/2020/" target="_blank">Selected to participate in the 10th Lisbon Machine Learning School (LxMLS 2020)</a>.</li>
 <li>2020/03 - Included as a program committee member (reviewer) for the IEEE INTERCON 2020.</li>
 <li>2020/03 - <a href="https://cmmrs.mpi-sws.org/" target="_blank">Accepted to participate in the CMMRS 2020: the Cornell, Maryland, Max Planck Pre-doctoral School</a>.</li>
 <li>2020/03 - <a href="https://picampus-school.com/programme/school-of-ai/" target="_blank">Glad to obtain a fellowship for the School of AI programme 2020, hosted by Pi School</a>.</li>
