--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ I have participated in prestigious conferences related to AI, such as the NeurIP
 <li>2019/11 - Glad to give a talk on AI in Healtcare at the department of Pharmacy and Biochemistry, at the UNMSM.</li>
 <li>2019/10 - <a href="https://www.latinxinai.org/neurips-2019" target="_blank">Winner of the LatinX in AI travel grant to participate in the prestigious NeurIPS 2019</a>.</li>
 <li>2019/10 - <a href="https://www.latinxinai.org/neurips-2019-presenters" target="_blank">My 3 submitted abstracts were accepted for the LXAI Workshop at the NeurIPS 2019</a>.</li>
-<li>2019/10 - <a href="https://www.springer.com/gp/book/9783030575656" target="_blank">Our paper, iwhich was developed in collaboration with the IIFIEE-UNI, was accepted for the BTSym'19</a>.</li>
+<li>2019/10 - <a href="https://www.springer.com/gp/book/9783030575656" target="_blank">Our paper, which was in collaboration with the IIFIEE-UNI, was accepted for the BTSym'19</a>.</li>
 <li>2019/09 - <a href="https://www.latinxinai.org/neurips-2019#nips-org" target="_blank">Selected as a program committee member (reviewer) for the LXAI Workshop at the NeurIPS 2019</a>.</li>
 <li>2019/09 - Invited to give a talk at the 22vo Meetup 2019, organized by Data Science Research Perú.</li>
 <li>2019/06 - <a href="https://ieeexplore.ieee.org/xpl/conhome/8846111/proceeding" target="_blank">My 2 submitted papers were accepted for the XXVI IEEE INTERCON 2019 conference</a>.</li>
@@ -214,7 +214,7 @@ I have participated in prestigious conferences related to AI, such as the NeurIP
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch by Python. Powered by Linux</a> <br/>
-Website updated: 2021-03-07  23:16 GMT <br/> 
+Website updated: 2021-03-07  23:17 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
