--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ I have participated in prestigious conferences related to AI, such as the NeurIP
 <li>2020/05 - <a href="http://lxmls.it.pt/2020/" target="_blank">Selected to participate in the 10th Lisbon Machine Learning School LxMLS 2020, Portugal</a>.</li>
 <li>2020/03 - Pleased to have been invited to be a paper reviewer at the IEEE INTERCON 2020 conference.</li>
 <li>2020/03 - <a href="https://cmmrs.mpi-sws.org/" target="_blank">Accepted to participate in the Cornell, Maryland, Max Planck Pre-doctoral School CMMRS 2020</a>.</li>
-<li>2020/03 - <a href="https://picampus-school.com/programme/school-of-ai/" target="_blank">Glad to obtain a fellowship for the School of AI programme 2020, hosted by Pi School</a>.</li>
+<li>2020/03 - <a href="https://picampus-school.com/programme/school-of-ai/" target="_blank">Glad to obtain a fellowship for the "School of AI 2020" programme, hosted by Pi School</a>.</li>
 <li>2020/01 - <a href="http://ailatinsum.mit.edu/" target="_blank">Selected and winner of a travel grant to the AI Latin America SumMIT, held at the MIT Media Lab</a>.</li>
 <li>2019/11 - <a href="http://vimp.math.unipd.it/people.html" target="_blank">Winner of a scholarship by Fondecyt Peru for a research stay at the University of Padua, Italy</a>.</li>
 <li>2019/11 - Glad to give a talk on AI in Healtcare at the department of Pharmacy and Biochemistry, at the UNMSM.</li>
@@ -214,7 +214,7 @@ I have participated in prestigious conferences related to AI, such as the NeurIP
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch by Python. Powered by Linux</a> <br/>
-Website updated: 2021-03-08  00:04 GMT <br/> 
+Website updated: 2021-03-08  00:07 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
