--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ I have participated in prestigious conferences related to AI, such as the NeurIP
 <li>2019/05 - <a href="https://icml.cc/Conferences/2019" target="_blank">Selected as winner of ICML and LXAI travel grants to participate in this prestigious conference</a>.</li>
 <li>2019/04 - <a href="https://www.latinxinai.org/icml-2019-presenters" target="_blank">Thrilled that my submitted abstract was accepted for the LXAI Workshop at the ICML 2019</a>.</li>
 <li>2018/06 - <a href="https://ieeexplore.ieee.org/xpl/conhome/8484861/proceeding" target="_blank">My submitted paper on deep learning was accepted for the IEEE INTERCON 2018 conference</a>.</li>
-<li>2017/08 - <a href="https://dblp.org/db/conf/ciarp/ciarp2017.html" target="_blank">My work, advised by Bogdan Kwolek, PhD, (AGH UST) was accepted for the CIARP 2017</a>.</li>
+<li>2017/08 - <a href="https://dblp.org/db/conf/ciarp/ciarp2017.html" target="_blank">My work, advised by Bogdan Kwolek, PhD, (from AGH UST) was accepted for the CIARP 2017</a>.</li>
 <li>2016/11 - <a href="http://www.unesco.agh.edu.pl/fileadmin/default/templates/css/j/unesco/system/program_UCTE_2016_v12_2016_12_06x.pdf" target="_blank">Selected as paper presenter and session chair for the UNESCO UCTE 2016 conference, Poland</a>.</li>
 <li>2016/06 - <a href="http://www.unesco.agh.edu.pl/en/" target="_blank">Winner of a fellowship for the "UNESCO/Poland Co-Sponsored Program 2016" at AGH UST, Poland</a>.</li>
 <li>2015/07 - <a href="https://www.uni.edu.pe/" target="_blank">Graduated with the first place in my graduating class at the Universidad Nacional de Ingeniería (UNI)</a>.</li>
@@ -214,7 +214,7 @@ I have participated in prestigious conferences related to AI, such as the NeurIP
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch by Python. Powered by Linux</a> <br/>
-Website updated: 2021-03-08  00:17 GMT <br/> 
+Website updated: 2021-03-08  00:20 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
