--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ I have participated in prestigious conferences related to AI, such as the NeurIP
     </div>
 </div>
 <br/>
-<h2>News</h2>
+<h2>News and updates</h2>
 <p>
 <ul>
 <li>2021/03 - <a href="https://www.latinxinai.org/cvpr-2021-about" target="_blank">Selected as paper reviewer for the LatinX in CV (LXCV) Research Workshop at CVPR 2021</a>.</li>
@@ -214,7 +214,7 @@ I have participated in prestigious conferences related to AI, such as the NeurIP
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch by Python. Powered by Linux</a> <br/>
-Website updated: 2021-03-08  00:20 GMT <br/> 
+Website updated: 2021-03-08  00:25 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
