--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ I have participated in prestigious conferences related to AI, such as the NeurIP
     </div>
 </div>
 <br/>
-<h2>Find me</h2>
+<h2>Find me on</h2>
 <div class="row">
     <div class="column left">
         <p>
@@ -214,7 +214,7 @@ I have participated in prestigious conferences related to AI, such as the NeurIP
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch by Python. Powered by Linux</a> <br/>
-Website updated: 2021-03-08  00:26 GMT <br/> 
+Website updated: 2021-03-08  00:27 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
