--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ I have participated in prestigious conferences related to AI, such as the NeurIP
 <li>2020/10 - Glad to be invited to give a talk for Inspiring UNI, as part of a series of professional talks.</li>
 <li>2020/10 - <a href="https://www.latinxinai.org/neurips-2020#nips-org" target="_blank">Selected as a program committee member (reviewer) for the LXAI Workshop at the NeurIPS 2020</a>.</li>
 <li>2020/09 - Invited to give a talk for the UNI Advanced Research Group on Artificial Intelligence - GAIA.</li>
-<li>2020/09 - Glad to give a talk at the "Semana de la Innovación", event organized by Fondecyt Peru.</li>
+<li>2020/09 - Glad to give a talk at the "Semana de la Innovación", which is organized by Fondecyt Peru.</li>
 <li>2020/09 - <a href="https://micromasters.mit.edu/ds/" target="_blank">Cheerful to start the MITx MicroMasters in Statistics and Data Science, funded by Aporta</a>.
 <li>2020/08 - Winner of a scholarship for "Advanced Program in Data Science & Global Skills", org. by Aporta & MIT.</li>
 <li>2020/08 - Pleased to have been invited to be a paper reviewer at the IEEE EIRCON 2020 conference.</li>
@@ -214,7 +214,7 @@ I have participated in prestigious conferences related to AI, such as the NeurIP
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch by Python. Powered by Linux</a> <br/>
-Website updated: 2021-03-08  00:33 GMT <br/> 
+Website updated: 2021-03-08  00:34 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
