--- a/research/research.html
+++ b/research/research.html
@@ -67,7 +67,7 @@
 <h3>Journal Articles</h3>
 <ul>
 <li>
-[under review] D. Núñez-Fernández, F. Barrientos-Porras, R. H. Gilman, M. Vittet-Mondoñedo, P. Sheen, M. Zimic. ‘A Convolutional Neural Network for gaze preference detection: A potential tool for diagnostics of autism spectrum disorder in children’. arXiv preprint arXiv:2007.14432. (2021) <br/>
+[under review] <u>D. Núñez-Fernández</u>, F. Barrientos-Porras, R. H. Gilman, M. Vittet-Mondoñedo, P. Sheen, M. Zimic. ‘A Convolutional Neural Network for gaze preference detection: A potential tool for diagnostics of autism spectrum disorder in children’. arXiv preprint arXiv:2007.14432. (2021) <br/>
 [<a href="https://arxiv.org/abs/2007.14432">PDF</a>] 
 [<a href="https://arxiv.org/abs/2007.14432">arXiv</a>] 
 </li>
@@ -182,7 +182,7 @@ D. Núñez-Fernández, B. Kwolek. ‘Hand Posture Recognition Using Convolutiona
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch by Python. Powered by Linux</a> <br/>
-Website updated: 2021-03-12  16:30 GMT <br/> 
+Website updated: 2021-03-12  16:31 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
