--- a/research/research.html
+++ b/research/research.html
@@ -80,47 +80,47 @@
 <h3>Conference Proceedings</h3>
 <ul>
 <li>
-A. Aspilcueta Narvaez, D. Núñez-Fernández, S. Gamarra Quispe, D. Lazo Ochoa. ‘Smart Campus IoT guidance system for visitors based on Bayesian filters’. Brazilian Technology Symposium BTSym 2019. Lima, Peru. (2019) <br/>
+A. Aspilcueta Narvaez, <u>D. Núñez-Fernández</u>, S. Gamarra Quispe, D. Lazo Ochoa. ‘Smart Campus IoT guidance system for visitors based on Bayesian filters’. Brazilian Technology Symposium BTSym 2019. Lima, Peru. (2019) <br/>
 [<a href="/research/2019%20-%20btsym 2019%20-%20iot%20guidance%20system%20based%20on%20bayesian%20filters.pdf">PDF</a>] 
 [<a href="https://doi.org/10.1007/978-3-030-57566-3_46">Springer</a>] 
 </li>
 <li> 
-D. Núñez-Fernández. ‘Development of a hand gesture based control interface using Deep Learning’. International Conference on Information Management and Big Data SIMBig 2019. Lima, Peru. (2019) <br/>
+<u>D. Núñez-Fernández</u>. ‘Development of a hand gesture based control interface using Deep Learning’. International Conference on Information Management and Big Data SIMBig 2019. Lima, Peru. (2019) <br/>
 [<a href="/research/2019%20-%20simbig%202019%20-%20development%20of%20a%20hand%20gesture%20interface.pdf">PDF</a>] 
 [<a href="https://link.springer.com/chapter/10.1007%2F978-3-030-46140-9_14">Springer</a>] 
 </li>
 <li> 
-D. Núñez-Fernández. ‘Implementation of an indoor location system for mobile-based museum guidance’. International Conference on Information Management and Big Data SIMBig 2019. Lima, Peru. (2019) <br/>
+<u>D. Núñez-Fernández</u>. ‘Implementation of an indoor location system for mobile-based museum guidance’. International Conference on Information Management and Big Data SIMBig 2019. Lima, Peru. (2019) <br/>
 [<a href="/research/2019%20-%20simbig%202019%20-%20implementation%20of%20an%20indoor%20location%20system%20museum.pdf">PDF</a>] 
 [<a href="https://link.springer.com/chapter/10.1007%2F978-3-030-46140-9_7">Springer</a>] 
 </li>
 <li>
-D. Núñez-Fernández. ‘Development of a hand pose recognition system on an embedded computer using Artificial Intelligence’. XXVI International Conf. on Electronics, Electrical Eng. and Computing INTERCON. Lima, Peru. (2019) <br/>
+<u>D. Núñez-Fernández</u>. ‘Development of a hand pose recognition system on an embedded computer using Artificial Intelligence’. XXVI International Conf. on Electronics, Electrical Eng. and Computing INTERCON. Lima, Peru. (2019) <br/>
 [<a href="/research/2019%20-%20intercon%202019%20-%20hand%20pose%20on%20embedded%20computer%20using%20ai.pdf">PDF</a>] 
 [<a href="https://ieeexplore.ieee.org/document/8853573">IEEE Xplore</a>] 
 </li>
 <li>
-D. Núñez-Fernández. ‘Implementation of a WiFi-based indoor location system on a mobile device for a university area’. XXVI International Conf. on Electronics, Electrical Eng. and Computing INTERCON. Lima, Peru. (2019) <br/>
+<u>D. Núñez-Fernández</u>. ‘Implementation of a WiFi-based indoor location system on a mobile device for a university area’. XXVI International Conf. on Electronics, Electrical Eng. and Computing INTERCON. Lima, Peru. (2019) <br/>
 [<a href="2019%20-%20intercon%202019%20-%20wifi%20indoor%20location%20on%20mobile%20device%20for%20university.pdf">PDF</a>] 
 [<a href="https://ieeexplore.ieee.org/document/8853556">IEEE Xplore</a>] 
 </li>
 <li>
-D. Núñez-Fernández. ‘Multi-subject continuous emotional states monitoring by using Convolutional Neural Networks’. International Conference on Control of Dynamical and Aerospace Systems XPOTRON 2019. Arequipa, Peru. (2019) <br/> 
+<u>D. Núñez-Fernández</u>. ‘Multi-subject continuous emotional states monitoring by using Convolutional Neural Networks’. International Conference on Control of Dynamical and Aerospace Systems XPOTRON 2019. Arequipa, Peru. (2019) <br/> 
 [<a href="/research/2019%20-%20xpotron%202019%20-%20multi-subject%20emotional%20states%20monitoring.pdf">PDF</a>]
 [<a href="https://ieeexplore.ieee.org/document/8705963">IEEE Xplore</a>]
 </li>
 <li>
-D. Núñez-Fernández, S. Hosseini. ‘Real-time handwritten letters recognition on an embedded computer using ConvNets’. Sciences and Humanities International Research Conference SHIRCON 2018. Lima, Peru. (2018) <br/> 
+<u>D. Núñez-Fernández</u>, S. Hosseini. ‘Real-time handwritten letters recognition on an embedded computer using ConvNets’. Sciences and Humanities International Research Conference SHIRCON 2018. Lima, Peru. (2018) <br/> 
 [<a href="/research/2018%20-%20shircon%202018%20-%20real-time%20handwritten%20letters%20recognition.pdf">PDF</a>]
 [<a href="https://ieeexplore.ieee.org/document/8592981">IEEE Xplore</a>]
 </li>
 <li>
-D. Núñez-Fernández. ‘A Real-Time Recognition System for User Characteristics Based on Deep Learning’. XXV International Conf. on Electronics, Electrical Eng. and Computing INTERCON 2018. Lima, Peru. (2018) <br/> 
+<u>D. Núñez-Fernández</u>. ‘A Real-Time Recognition System for User Characteristics Based on Deep Learning’. XXV International Conf. on Electronics, Electrical Eng. and Computing INTERCON 2018. Lima, Peru. (2018) <br/> 
 [<a href="/research/2018%20-%20intercon%202018%20-%20real-time%20recognition%20for%20user%20characteristics.pdf">PDF</a>] 
 [<a href="https://ieeexplore.ieee.org/document/8526381">IEEE Xplore</a>] 
 </li>
 <li> 
-D. Núñez-Fernández, B. Kwolek. ‘Hand Posture Recognition Using Convolutional Neural Network’. 22nd Iberoamerican Congress on Pattern Recognition CIARP 2017. Valparaiso, Chile. (2017) <br/> 
+<u>D. Núñez-Fernández</u>, B. Kwolek. ‘Hand Posture Recognition Using Convolutional Neural Network’. 22nd Iberoamerican Congress on Pattern Recognition CIARP 2017. Valparaiso, Chile. (2017) <br/> 
 [<a href="/research/2018%20-%20ciarp%202017%20-%20hand%20posture%20recognition%20using%20cnn.pdf">PDF</a>]
 [<a href="https://link.springer.com/chapter/10.1007/978-3-319-75193-1_53">Springer</a>]
 </li>
@@ -128,32 +128,32 @@ D. Núñez-Fernández, B. Kwolek. ‘Hand Posture Recognition Using Convolutiona
 <h3>Workshop papers</h3>
 <ul>
 <li>
-D. Núñez-Fernández, L. Ballan, G. Jiménez-Avalos, J. Coronel-Herrera, M. Zimic-Peralta. ‘Automatic semantic segmentation for prediction of tuberculosis using lens-free microscopy images’. Machine Learning for Global Health Workshop at ICML 2020. Vienna, Austria. (2020) <br/>
+<u>D. Núñez-Fernández</u>, L. Ballan, G. Jiménez-Avalos, J. Coronel-Herrera, M. Zimic-Peralta. ‘Automatic semantic segmentation for prediction of tuberculosis using lens-free microscopy images’. Machine Learning for Global Health Workshop at ICML 2020. Vienna, Austria. (2020) <br/>
 [<a href="/research/2020%20-%20ml4gh%20at%20icml%202020%20-%20segmentation%20for%20prediction%20of%20tuberculosis.pdf">PDF</a>] 
 [<a href="https://arxiv.org/abs/2007.02482">arXiv</a>] 
 </li>
 <li>
-D. Núñez-Fernández, L. Ballan, G. Jiménez-Avalos, J. Coronel-Herrera, M. Zimic-Peralta. ‘Using Capsule Neural Network to predict Tuberculosis in lens-free microscopic images’. Healthcare Systems, Population Health, and the Role of Health-Tech (HSYS) Workshop at ICML 2020. Vienna, Austria. (2020) <br/>
+<u>D. Núñez-Fernández</u>, L. Ballan, G. Jiménez-Avalos, J. Coronel-Herrera, M. Zimic-Peralta. ‘Using Capsule Neural Network to predict Tuberculosis in lens-free microscopic images’. Healthcare Systems, Population Health, and the Role of Health-Tech (HSYS) Workshop at ICML 2020. Vienna, Austria. (2020) <br/>
 [<a href="/research/2020%20-%20hsys%20at%20icml%202020%20-%20capsule%20neural%20network%20for%20tuberculosis%20detection.pdf">PDF</a>] 
 [<a href="https://arxiv.org/abs/2007.02457">arXiv</a>] 
 </li>
 <li>
-D. Núñez-Fernández, F. Porras-Barrientos, M. Vittet-Mondoñedo, R. H. Gilman, M. Zimic-Peralta. ‘Prediction of gaze direction using Convolutional Neural Networks for Autism diagnosis’. LatinX in AI (LXAI) Research Workshop at NeurIPS 2019. Vancouver, Canada. (2019) <br/>
+<u>D. Núñez-Fernández</u>, F. Porras-Barrientos, M. Vittet-Mondoñedo, R. H. Gilman, M. Zimic-Peralta. ‘Prediction of gaze direction using Convolutional Neural Networks for Autism diagnosis’. LatinX in AI (LXAI) Research Workshop at NeurIPS 2019. Vancouver, Canada. (2019) <br/>
 [<a href="/research/2019%20-%20lxai%20at%20neurips%202019%20-%20prediction%20gaze%20direction%20using%20cnns%20for%20autism.pdf">PDF</a>] 
 [<a href="https://arxiv.org/abs/1911.05629">arXiv</a>] 
 </li>
 <li>
-B. Saldivar-Espinoza, D. Núñez-Fernández, F. Porras-Barrientos, A. Alva-Mantari, L. S. Leslie, M. Zimic-Peralta. ‘Portable system for the prediction of anemia based on the ocular conjunctiva using Artificial Intelligence’. LatinX in AI (LXAI) Research Workshop at NeurIPS 2019. Vancouver, Canada. (2019) <br/>
+B. Saldivar-Espinoza, <u>D. Núñez-Fernández</u>, F. Porras-Barrientos, A. Alva-Mantari, L. S. Leslie, M. Zimic-Peralta. ‘Portable system for the prediction of anemia based on the ocular conjunctiva using Artificial Intelligence’. LatinX in AI (LXAI) Research Workshop at NeurIPS 2019. Vancouver, Canada. (2019) <br/>
 [<a href="/research/2019%20-%20lxai%20at%20neurips%202019%20-%20prediction%20of%20anemia%20via%20the%20ocular%20conjunctiva.pdf">PDF</a>] 
 [<a href="https://arxiv.org/abs/1910.12399">arXiv</a>] 
 </li>
 <li>
-D. Núñez-Fernández. ‘Development of a hand pose recognition system on an embedded computer using CNNs’. LatinX in AI (LXAI) Research Workshop at NeurIPS 2019. Vancouver, Canada. (2019) <br/>
+<u>D. Núñez-Fernández</u>. ‘Development of a hand pose recognition system on an embedded computer using CNNs’. LatinX in AI (LXAI) Research Workshop at NeurIPS 2019. Vancouver, Canada. (2019) <br/>
 [<a href="/research/2019%20-%20lxai%20at%20neurips%202019%20-%20hand%20pose%20recognition%20on%20an%20embedded%20computer.pdf">PDF</a>] 
 [<a href="https://arxiv.org/abs/1910.11100v1">arXiv</a>] 
 </li>
 <li>
-D. Núñez-Fernández, B. Kwolek. ‘Hand Posture Recognition Using Convolutional Neural Networks’. LatinX in AI (LXAI) Research Workshop at ICML 2019. Long Beach, USA. (2019) <br/>
+<u>D. Núñez-Fernández</u>, B. Kwolek. ‘Hand Posture Recognition Using Convolutional Neural Networks’. LatinX in AI (LXAI) Research Workshop at ICML 2019. Long Beach, USA. (2019) <br/>
 [<a href="/research/2019%20-%20lxai%20at%20icml%202019%20-%20hand%20posture%20recognition%20using%20cnns.pdf">PDF</a>] 
 [<a href="https://hal.archives-ouvertes.fr/hal-02263892">Open Archive HAL</a>] 
 </li>
@@ -182,7 +182,7 @@ D. Núñez-Fernández, B. Kwolek. ‘Hand Posture Recognition Using Convolutiona
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch by Python. Powered by Linux</a> <br/>
-Website updated: 2021-03-12  16:31 GMT <br/> 
+Website updated: 2021-03-12  16:36 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
