--- a/research/research.html
+++ b/research/research.html
@@ -73,7 +73,7 @@
 </li>
 <li>
 [under review] M. Fernandez Díaz, K. Calderon, A. Rojas-Neyra, [and 34 others, including <u>D. Núñez-Fernández</u>], for the COVID-19 Working Group in Peru. ‘Development and pre-clinical evaluation of Newcastle disease virus-vectored SARS-CoV-2 intranasal vaccine candidate’. bioRxiv preprint bioRxiv:2021.03.07.434276. (2021) <br/>
-[<a href="https://www.biorxiv.org/content/10.1101/2021.03.07.434276v1">PDF</a>] 
+[<a href="https://www.biorxiv.org/content/10.1101/2021.03.07.434276v1.full.pdf">PDF</a>] 
 [<a href="https://www.biorxiv.org/content/10.1101/2021.03.07.434276v1">bioRxiv</a>] 
 </li>
 </ul>
@@ -182,7 +182,7 @@ B. Saldivar-Espinoza, <u>D. Núñez-Fernández</u>, F. Porras-Barrientos, A. Alv
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch by Python. Powered by Linux</a> <br/>
-Website updated: 2021-03-12  16:54 GMT <br/> 
+Website updated: 2021-03-12  16:55 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
