--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ I have participated in prestigious conferences related to AI, such as the NeurIP
 <h2>News and updates</h2>
 <p>
 <ul>
-<li>2021/03 - <a href="https://www.biorxiv.org/content/10.1101/2021.03.07.434276v1" target="_blank">Grateful that my paper has been accepted to the AI for Public Health workshop at ICLR 2021</a>.</li>
+<li>2021/03 - <a href="https://aiforpublichealth.github.io/papers/" target="_blank">Grateful that my paper has been accepted to the AI for Public Health workshop at ICLR 2021</a>.</li>
 <li>2021/03 - <a href="https://www.biorxiv.org/content/10.1101/2021.03.07.434276v1" target="_blank">Collaborated in the research of the Peruvian COVID-19 vaccine, analyzing the mobility in animal tests</a>.</li>
 <li>2021/03 - <a href="https://www.latinxinai.org/cvpr-2021-about" target="_blank">Selected as paper reviewer for the LatinX in CV (LXCV) Research Workshop at CVPR 2021</a>.</li>
 <li>2021/03 - <a href="https://opencv.org/opencv-ai-competition-2021/" target="_blank">Our team 'Vigilare' won the Phase 1 of the OpenCV AI Competition, congts Dari, Bernick and Jhonny!!</a>.</li>
@@ -216,7 +216,7 @@ I have participated in prestigious conferences related to AI, such as the NeurIP
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch by Python. Powered by Linux</a> <br/>
-Website updated: 2021-03-25  07:08 GMT <br/> 
+Website updated: 2021-03-25  07:09 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
