--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ I have participated in prestigious conferences related to AI, such as the NeurIP
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&&nbsp;nbsp;2021-04-04 &nbsp;&nbsp;11:18 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-04-04&nbsp;&nbsp;11:19 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
