--- a/research/research.html
+++ b/research/research.html
@@ -129,7 +129,7 @@ A. Aspilcueta Narvaez, <u>D. Núñez-Fernández</u>, S. Gamarra Quispe, D. Lazo 
 <ul>
 <li>
 <u>D. Núñez-Fernández</u>, L. Ballan, G. Jiménez-Avalos, J. Coronel, P. Sheen, M. Zimic. ‘Prediction of Tuberculosis using U-Net and segmentation techniques’. AI for Public Health Workshop at ICLR 2021. Vienna, Austria. (2021) <br/>
-[<a href="/research/2020%20-%20ml4gh%20at%20icml%202020%20-%20segmentation%20for%20prediction%20of%20tuberculosis.pdf">PDF</a>] 
+[<a href="/research/2021%20-%20ai4ph%20at%20iclr%202021%20-%20prediction%20of%20tb%20using%20u-net%20and%20segm%20tecniques.pdf">PDF</a>] 
 [<a href="https://arxiv.org/abs/2104.01071">arXiv</a>] 
 </li>
 <li>
@@ -187,7 +187,7 @@ B. Saldivar-Espinoza, <u>D. Núñez-Fernández</u>, F. Porras-Barrientos, A. Alv
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-04-05&nbsp;&nbsp;17:32 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-04-05&nbsp;&nbsp;17:34 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
