--- a/research/research.html
+++ b/research/research.html
@@ -129,8 +129,13 @@ A. Aspilcueta Narvaez, <u>D. Núñez-Fernández</u>, S. Gamarra Quispe, D. Lazo 
 <ul>
 <li>
 <u>D. Núñez-Fernández</u>, L. Ballan, G. Jiménez-Avalos, J. Coronel, P. Sheen, M. Zimic. ‘Prediction of Tuberculosis using U-Net and segmentation techniques’. AI for Public Health Workshop at ICLR 2021. Vienna, Austria. (2021) <br/>
-[<a href="/research/2021%20-%20ai4ph%20at%20iclr%202021%20-%20prediction%20of%20tb%20using%20u-net%20and%20segm%20tecniques.pdf">PDF</a>] 
+[<a href="/research/wp__2021__ai4ph_at_iclr_2021__prediction_of_tb_using_unet_and_segm_tecniques.pdf">PDF</a>] 
 [<a href="https://arxiv.org/abs/2104.01071">arXiv</a>] 
+</li>
+<li>
+C. Rojas-Azabache, K. Vilca-Janampa, R. Guerrero-Huayta, <u>D. Núñez-Fernández</u>. ‘Detection of COVID-19 Disease using Deep Neural Networks with Ultrasound Imaging’. Practical Machine Learning for Developing Countries Workshop at ICLR 2021. Vienna, Austria. (2021) <br/>
+[<a href="/research/wp__2021__pml4dc_at_iclr_2021__detection_of_covid_using_dnn_with_ultrasound_img">PDF</a>] 
+[<a href="https://arxiv.org/abs/2104.01509">arXiv</a>] 
 </li>
 <li>
 <u>D. Núñez-Fernández</u>, L. Ballan, G. Jiménez-Avalos, J. Coronel-Herrera, M. Zimic-Peralta. ‘Automatic semantic segmentation for prediction of tuberculosis using lens-free microscopy images’. Machine Learning for Global Health Workshop at ICML 2020. Vienna, Austria. (2020) <br/>
@@ -187,7 +192,7 @@ B. Saldivar-Espinoza, <u>D. Núñez-Fernández</u>, F. Porras-Barrientos, A. Alv
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-04-06&nbsp;&nbsp;07:38 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-04-06&nbsp;&nbsp;07:51 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
