--- a/research/research.html
+++ b/research/research.html
@@ -81,7 +81,7 @@
 <ul>
 <li>
 A. Aspilcueta Narvaez, <u>D. Núñez-Fernández</u>, S. Gamarra Quispe, D. Lazo Ochoa. ‘Smart Campus IoT guidance system for visitors based on Bayesian filters’. Brazilian Technology Symposium BTSym 2019. Lima, Peru. (2019) <br/>
-[<a href="/research/2019%20-%20btsym 2019%20-%20iot%20guidance%20system%20based%20on%20bayesian%20filters.pdf">PDF</a>] 
+[<a href="/research/cp__2019__btsym_2019__iot_guidance_system_based_on_bayesian_filters.pdf">PDF</a>] 
 [<a href="https://doi.org/10.1007/978-3-030-57566-3_46">Springer</a>] 
 </li>
 <li> 
@@ -192,7 +192,7 @@ B. Saldivar-Espinoza, <u>D. Núñez-Fernández</u>, F. Porras-Barrientos, A. Alv
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-04-06&nbsp;&nbsp;08:03 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-04-06&nbsp;&nbsp;08:08 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
