--- a/research/research.html
+++ b/research/research.html
@@ -101,27 +101,27 @@ A. Aspilcueta Narvaez, <u>D. Núñez-Fernández</u>, S. Gamarra Quispe, D. Lazo 
 </li>
 <li>
 <u>D. Núñez-Fernández</u>. ‘Implementation of a WiFi-based indoor location system on a mobile device for a university area’. XXVI International Conf. on Electronics, Electrical Eng. and Computing INTERCON. Lima, Peru. (2019) <br/>
-[<a href="2019%20-%20intercon%202019%20-%20wifi%20indoor%20location%20on%20mobile%20device%20for%20university.pdf">PDF</a>] 
+[<a href="/research/cp__2019__intercon_2019__wifi_indoor_location_on_mobile_device_for_university.pdf">PDF</a>] 
 [<a href="https://ieeexplore.ieee.org/document/8853556">IEEE Xplore</a>] 
 </li>
 <li>
 <u>D. Núñez-Fernández</u>. ‘Multi-subject continuous emotional states monitoring by using Convolutional Neural Networks’. International Conference on Control of Dynamical and Aerospace Systems XPOTRON 2019. Arequipa, Peru. (2019) <br/> 
-[<a href="/research/2019%20-%20xpotron%202019%20-%20multi-subject%20emotional%20states%20monitoring.pdf">PDF</a>]
+[<a href="/research/cp__2019__xpotron_2019__multi_subject_emotional_states_monitoring.pdf">PDF</a>]
 [<a href="https://ieeexplore.ieee.org/document/8705963">IEEE Xplore</a>]
 </li>
 <li>
 <u>D. Núñez-Fernández</u>, S. Hosseini. ‘Real-time handwritten letters recognition on an embedded computer using ConvNets’. Sciences and Humanities International Research Conference SHIRCON 2018. Lima, Peru. (2018) <br/> 
-[<a href="/research/2018%20-%20shircon%202018%20-%20real-time%20handwritten%20letters%20recognition.pdf">PDF</a>]
+[<a href="/research/cp__2018__shircon_2018__real_time_handwritten_letters_recognition.pdf">PDF</a>]
 [<a href="https://ieeexplore.ieee.org/document/8592981">IEEE Xplore</a>]
 </li>
 <li>
 <u>D. Núñez-Fernández</u>. ‘A Real-Time Recognition System for User Characteristics Based on Deep Learning’. XXV International Conf. on Electronics, Electrical Eng. and Computing INTERCON 2018. Lima, Peru. (2018) <br/> 
-[<a href="/research/2018%20-%20intercon%202018%20-%20real-time%20recognition%20for%20user%20characteristics.pdf">PDF</a>] 
+[<a href="/research/cp__2018__intercon_2018__real_time_recognition_for_user_characteristics.pdf">PDF</a>] 
 [<a href="https://ieeexplore.ieee.org/document/8526381">IEEE Xplore</a>] 
 </li>
 <li> 
 <u>D. Núñez-Fernández</u>, B. Kwolek. ‘Hand Posture Recognition Using Convolutional Neural Network’. 22nd Iberoamerican Congress on Pattern Recognition CIARP 2017. Valparaiso, Chile. (2017) <br/> 
-[<a href="/research/2018%20-%20ciarp%202017%20-%20hand%20posture%20recognition%20using%20cnn.pdf">PDF</a>]
+[<a href="/research/cp__2018__ciarp_2017__hand_posture_recognition_using_cnn.pdf">PDF</a>]
 [<a href="https://link.springer.com/chapter/10.1007/978-3-319-75193-1_53">Springer</a>]
 </li>
 </ul>
@@ -192,7 +192,7 @@ B. Saldivar-Espinoza, <u>D. Núñez-Fernández</u>, F. Porras-Barrientos, A. Alv
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-04-06&nbsp;&nbsp;08:11 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-04-06&nbsp;&nbsp;08:19 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
