--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ I have participated in prestigious conferences related to AI, such as the NeurIP
 <h2>News and updates</h2>
 <p>
 <ul>
-<li>2021 Apr - <a href="https://probabilistic.ai/" target="_blank">Accepted to participate in the Nordic Probabilistic AI School (ProbAI) 2021</a>.</li>
+<li>2021 Apr - <a href="https://probabilistic.ai/" target="_blank">Pleased to be accepted to participate in the Nordic Probabilistic AI School (ProbAI) 2021</a>.</li>
 <li>2021 Apr - Glad to attend the DLI workshop "Applications of AI for Anomaly Detection" at NVIDIA GTC 2021.</li>
 <li>2021 Apr - Winner of a D&I registration grant for the EACL 2021, one of the best conferences in NLP.</li>
 <li>2021 Mar - <a href="https://pml4dc.github.io/iclr2021/" target="_blank">Cheerful that our paper, which I advised, has been accepted to the PML4DC workshop at ICLR 2021</a>.</li>
@@ -221,7 +221,7 @@ I have participated in prestigious conferences related to AI, such as the NeurIP
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-04-20&nbsp;&nbsp;01:00 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-04-20&nbsp;&nbsp;01:03 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
