--- a/pre.html
+++ b/pre.html
@@ -51,6 +51,7 @@
 <li><a href="/index.html">Home</a></li>
 <li><a href="/research/research.html">Research</a></li>
 <li><a href="/posts/posts.html">Posts</a></li>
+<li><a href="/gallery/gallery.html">Gallery</a></li>
 <li><a href="/contact/contact.html">Contact</a></li>
 <li><a href="/curriculum/curriculum.html">Curriculum</a></li>
 </ul>
