--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -75,13 +75,13 @@
 &nbsp &nbsp [<a href="CV-DennisNunezFernandez-spanish.pdf">CV-DennisNunezFernandez-spanish.pdf</a>]
 <div class="row">
   <div class="column">
-    <img src="https://dennishnf.com/gallery/2019_12__neurips2019.jpg" alt="Snow" style="width:100%">
+    <img src="https://dennishnf.com/gallery/2019_12__neurips2019.jpg" alt="Snow" style="width:40mm">
   </div>
   <div class="column">
-    <img src="https://dennishnf.com/gallery/2019_12__neurips2019.jpg" alt="Forest" style="width:100%">
+    <img src="https://dennishnf.com/gallery/2019_12__neurips2019.jpg" alt="Forest" style="width:40mm">
   </div>
   <div class="column">
-    <img src="https://dennishnf.com/gallery/2019_12__neurips2019.jpg" alt="Mountains" style="width:100%">
+    <img src="https://dennishnf.com/gallery/2019_12__neurips2019.jpg" alt="Mountains" style="width:40mm">
   </div>
 </div>
 </p>
@@ -110,7 +110,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-04-27&nbsp;&nbsp;07:27 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-04-27&nbsp;&nbsp;07:28 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
