--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -88,6 +88,7 @@
 
 
 <p> 
+<div class="row">
 <div class="oneThird">
     <img src="https://dennishnf.com/gallery/2019_12__neurips2019.jpg"></img>
     <p>Caption</p>
@@ -99,6 +100,7 @@
 <div class="oneThird">
     <img src="https://dennishnf.com/gallery/2013_10__robot1.jpg"></img>
     <p>Caption</p>
+</div>
 </div>
 </p>
 
