--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -65,36 +65,36 @@
 <br/>
 <h2>Gallery</h2>
 <br/>
-<p> 
-<div class="row">
+<main class="grid">
+
 <div class="oneThird">
-    <img src="https://dennishnf.com/gallery/2019_12__neurips2019.jpg"></img>
-    <p>Caption caption caption caption caption caption</p>
-</div>
+  <img src="https://dennishnf.com/gallery/2019_12__neurips2019.jpg" alt="Sample photo">
+  <p>Caption caption caption caption caption caption</p>
+  </div>
+  
 <div class="oneThird">
-    <img src="https://dennishnf.com/gallery/2013_10__robot2.jpg"></img>
-    <p>Caption caption caption caption caption</p>
-</div>
+  <img src="https://dennishnf.com/gallery/2013_10__robot2.jpg" alt="Sample photo">
+  <p>Caption caption caption caption caption caption</p>
+  </div>
+
 <div class="oneThird">
-    <img src="https://dennishnf.com/gallery/2013_10__robot1.jpg"></img>
-    <p>Caption caption caption caption caption caption</p>
-</div>
-</div>
-<div class="row">
+  <img src="https://dennishnf.com/gallery/2013_10__robot2.jpg" alt="Sample photo">
+  <p>Caption caption caption caption caption caption</p>
+  </div>
+</main>
+
+<main class="grid">
 <div class="oneThird">
-    <img src="https://dennishnf.com/gallery/2019_12__neurips2019.jpg"></img>
-    <p>Caption</p>
-</div>
+  <img src="https://dennishnf.com/gallery/2013_10__robot2.jpg" alt="Sample photo">
+  <p>Caption caption caption caption caption caption</p>
+  </div>
+  
 <div class="oneThird">
-    <img src="https://dennishnf.com/gallery/2013_10__robot2.jpg"></img>
-    <p>Caption</p>
-</div>
-<div class="oneThird">
-    <img src="https://dennishnf.com/gallery/2013_10__robot1.jpg"></img>
-    <p>Caption</p>
-</div>
-</div>
-</p>
+  <img src="https://dennishnf.com/gallery/2019_12__neurips2019.jpg" alt="Sample photo">
+  <p>Caption caption caption caption caption caption</p>
+  </div>
+
+</main>
 <br/>
 
 <br/>
@@ -120,7 +120,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-04-27&nbsp;&nbsp;08:04 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-04-27&nbsp;&nbsp;08:39 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
