--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -69,6 +69,7 @@
 <div class="row">
 <main class="grid">
 
+
 <div class="oneThird">
   <img src="https://dennishnf.com/gallery/2019_12__neurips2019.jpg" alt="Sample photo">
   <p>Caption caption caption caption caption caption</p>
@@ -95,6 +96,12 @@
   <img src="https://dennishnf.com/gallery/2019_12__neurips2019.jpg" alt="Sample photo">
   <p>Caption caption caption caption caption caption</p>
   </div>
+
+<div class="oneThird">
+  <img src="https://dennishnf.com/gallery/2019_12__neurips2019.jpg" alt="Sample photo">
+  <p>Caption caption caption caption caption caption</p>
+  </div>
+
 
 </main>
 </div>
@@ -124,7 +131,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-04-27&nbsp;&nbsp;08:42 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-04-27&nbsp;&nbsp;08:43 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
