--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -67,43 +67,52 @@
 <br/>
 <p> 
 <div class="row">
+<!-------------------->
 <main class="grid">
-
-
 <div class="oneThird">
   <img src="https://dennishnf.com/gallery/2019_12__neurips2019.jpg" alt="Sample photo">
   <p>Caption caption caption caption caption caption</p>
   </div>
-  
 <div class="oneThird">
   <img src="https://dennishnf.com/gallery/2013_10__robot1.jpg" alt="Sample photo">
   <p>Caption caption caption caption caption caption</p>
   </div>
-
 <div class="oneThird">
   <img src="https://dennishnf.com/gallery/2013_10__robot2.jpg" alt="Sample photo">
   <p>Caption caption caption caption caption caption</p>
   </div>
 </main>
-
+<!-------------------->
 <main class="grid">
 <div class="oneThird">
   <img src="https://dennishnf.com/gallery/2013_10__robot1.jpg" alt="Sample photo">
   <p>Caption caption caption caption caption caption</p>
   </div>
-  
 <div class="oneThird">
   <img src="https://dennishnf.com/gallery/2019_12__neurips2019.jpg" alt="Sample photo">
   <p>Caption caption caption caption caption caption</p>
   </div>
-
 <div class="oneThird">
   <img src="https://dennishnf.com/gallery/2019_12__neurips2019.jpg" alt="Sample photo">
   <p>Caption caption caption caption caption caption</p>
   </div>
-
-
 </main>
+<!-------------------->
+<main class="grid">
+<div class="oneThird">
+  <img src="https://dennishnf.com/gallery/2019_12__neurips2019.jpg" alt="Sample photo">
+  <p>Caption caption caption caption caption caption</p>
+  </div>
+<div class="oneThird">
+  <img src="https://dennishnf.com/gallery/2013_10__robot1.jpg" alt="Sample photo">
+  <p>Caption caption caption caption caption caption</p>
+  </div>
+<div class="oneThird">
+  <img src="https://dennishnf.com/gallery/2013_10__robot2.jpg" alt="Sample photo">
+  <p>Caption caption caption caption caption caption</p>
+  </div>
+</main>
+<!-------------------->
 </div>
 </p>
 <br/>
@@ -131,7 +140,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-04-27&nbsp;&nbsp;08:43 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-04-27&nbsp;&nbsp;08:47 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
