--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -81,6 +81,10 @@
   <img src="https://dennishnf.com/gallery/2013_10__peru_robot2.jpg" alt="Sample photo">
   <p style="text-align:center">Caption caption caption caption caption caption</p>
 </div>
+<div class="oneThird">
+  <img src="https://dennishnf.com/gallery/2013_10__peru_robot2.jpg" alt="Sample photo">
+  <p style="text-align:center">Caption caption caption caption caption caption</p>
+</div>
 </main>
 <!-------------------->
 <main class="grid">
@@ -96,6 +100,10 @@
   <img src="https://dennishnf.com/gallery/2019_12__canada_neurips2019.jpg" alt="Sample photo">
   <p style="text-align:center">Caption caption caption caption caption caption</p>
 </div>
+<div class="oneThird">
+  <img src="https://dennishnf.com/gallery/2013_10__peru_robot2.jpg" alt="Sample photo">
+  <p style="text-align:center">Caption caption caption caption caption caption</p>
+</div>
 </main>
 <!-------------------->
 <main class="grid">
@@ -105,6 +113,10 @@
 </div>
 <div class="oneThird">
   <img src="https://dennishnf.com/gallery/2019_06__usa_goldengate.jpg" alt="Sample photo">
+  <p style="text-align:center">Caption caption caption caption caption caption</p>
+</div>
+<div class="oneThird">
+  <img src="https://dennishnf.com/gallery/2013_10__peru_robot2.jpg" alt="Sample photo">
   <p style="text-align:center">Caption caption caption caption caption caption</p>
 </div>
 <div class="oneThird">
