--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -71,7 +71,7 @@
 <main class="grid">
 <div class="oneThird">
   <img src="https://dennishnf.com/gallery/2020_03__belgium_attomium.jpg" alt="Sample photo">
-  <p style="text-align:center">The Attomium. Brussels, Belgium. Mar 2020.</p>
+  <p style="text-align:center">The Attomium. Brussels, Belgium. 2020 Mar.</p>
 </div>
 <div class="oneThird">
   <img src="https://dennishnf.com/gallery/2013_10__peru_robot1.jpg" alt="Sample photo">
