--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -71,7 +71,7 @@
 <main class="grid">
 <div class="oneThird">
   <img src="https://dennishnf.com/gallery/2020_03__belgium_attomium.jpg" alt="Sample photo">
-  <p style="text-align:center">The Attomium. Brussels, Belgium. 2020 Mar.</p>
+  <p style="text-align:center">The Attomium. <br> Brussels, Belgium. <br> 2020 March.</p>
 </div>
 <div class="oneThird">
   <img src="https://dennishnf.com/gallery/2013_10__peru_robot1.jpg" alt="Sample photo">
@@ -152,7 +152,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-04-27&nbsp;&nbsp;09:09 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-04-27&nbsp;&nbsp;09:12 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
