--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -87,7 +87,7 @@
 </div>
 <div class="oneThird">
   <img src="https://dennishnf.com/gallery/2019_12__canada_neurips2019.jpg" alt="Sample photo">
-  <p style="text-align:center">NeurIPS 2019. <br> Vancouver, Canada. <br> 2019 December.</p>
+  <p style="text-align:center">Poster presentation at LXAI workshop at NeurIPS 2019. <br> Vancouver, Canada. <br> 2019 December.</p>
 </div>
 <div class="oneThird">
   <img src="https://dennishnf.com/gallery/2019_06__usa_icml2010.jpg" alt="Sample photo">
@@ -145,7 +145,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-04-27&nbsp;&nbsp;10:08 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-04-27&nbsp;&nbsp;10:10 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
