--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -70,6 +70,14 @@
 <!-------------------->
 <main class="grid">
 <div class="oneThird">
+  <img src="https://dennishnf.com/gallery/2021_04__peru_chota2.jpg" alt="Sample photo">
+  <p style="text-align:center">My hometown, Chota. <br> Chota, Peru. <br> 2021 April.</p>
+</div>
+<div class="oneThird">
+  <img src="https://dennishnf.com/gallery/2021_04__peru_chota1.jpg" alt="Sample photo">
+  <p style="text-align:center">My hometown, Chota. <br> Chota, Peru. <br> 2021 April.</p>
+</div>
+<div class="oneThird">
   <img src="https://dennishnf.com/gallery/2020_03__belgium_attomium.jpg" alt="Sample photo">
   <p style="text-align:center">The Attomium. <br> Brussels, Belgium. <br> 2020 March.</p>
 </div>
@@ -145,7 +153,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-04-27&nbsp;&nbsp;10:10 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-04-27&nbsp;&nbsp;10:22 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
