--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -98,12 +98,20 @@
   <p style="text-align:center">Poster presentation at LXAI workshop at NeurIPS 2019. <br> Vancouver, Canada. <br> 2019 December.</p>
 </div>
 <div class="oneThird">
-  <img src="https://dennishnf.com/gallery/2019_06__usa_icml2019.jpg" alt="Sample photo">
-  <p style="text-align:center">The ICML 2019 conference. <br> Long Beach, USA. <br> 2019 June.</p>
-</div>
-<div class="oneThird">
   <img src="https://dennishnf.com/gallery/2019_06__usa_goldengate.jpg" alt="Sample photo">
   <p style="text-align:center">The Golden Gate Bridge. <br> San Francisco, USA. <br> 2019 June.</p>
+</div>
+<div class="oneThird">
+  <img src="https://dennishnf.com/gallery/2019_06__usa_lxaiicml20192.jpg" alt="Sample photo">
+  <p style="text-align:center">Peruvian group at the LXAI at ICML 2019. <br> Long Beach, USA. <br> 2019 June.</p>
+</div>
+<div class="oneThird">
+  <img src="https://dennishnf.com/gallery/2019_06__usa_lxaiicml20191.jpg" alt="Sample photo">
+  <p style="text-align:center">Poster presentation at LXAI workshop at ICML 2019. <br> Long Beach, USA. <br> 2019 June.</p>
+</div>
+<div class="oneThird">
+  <img src="https://dennishnf.com/gallery/2019_06__usa_icml2019.jpg" alt="Sample photo">
+  <p style="text-align:center">The ICML 2019 conference. <br> Long Beach, USA. <br> 2019 June.</p>
 </div>
 <div class="oneThird">
   <img src="https://dennishnf.com/gallery/2017_03__poland_naorobot.jpg" alt="Sample photo">
@@ -153,7 +161,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-04-27&nbsp;&nbsp;10:23 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-04-27&nbsp;&nbsp;10:25 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
