--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -95,6 +95,10 @@
 </div>
 <div class="oneThird">
   <img src="https://dennishnf.com/gallery/2019_12__canada_neurips2019.jpg" alt="Sample photo">
+  <p style="text-align:center">Participating at the NeurIPS 2019. <br> Vancouver, Canada. <br> 2019 December.</p>
+</div>
+<div class="oneThird">
+  <img src="https://dennishnf.com/gallery/2019_12__canada_lxaineurips2019.jpg" alt="Sample photo">
   <p style="text-align:center">Poster presentation at LXAI workshop at NeurIPS 2019. <br> Vancouver, Canada. <br> 2019 December.</p>
 </div>
 <div class="oneThird">
@@ -161,7 +165,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-04-27&nbsp;&nbsp;10:25 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-04-27&nbsp;&nbsp;10:28 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
