--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -139,7 +139,7 @@
 </div>
 <div class="oneThird">
   <img src="https://dennishnf.com/gallery/2013_04__peru_talkieeeuni.jpg" alt="Sample photo">
-  <p style="text-align:center">Giving a talking on Neural Networks at FIEE UNI. <br> Lima, Peru. <br> 2013 April.</p>
+  <p style="text-align:center">Giving a talking on neural networks at FIEE UNI. <br> Lima, Peru. <br> 2013 April.</p>
 </div>
 </main>
 <!-------------------->
@@ -169,7 +169,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-04-27&nbsp;&nbsp;18:58 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-04-27&nbsp;&nbsp;19:03 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
