--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ I have participated in prestigious conferences related to AI, such as the NeurIP
 <li>2020 Jun - <a href="https://sites.google.com/view/inclusion-2020/inclusion-fellowsbio#h.kvia409tw9k8" target="_blank">Selected as one of the Inclusion Fellows for the "Science and Systems RSS 2020" conference</a>.</li>
 <li>2020 Jun - <a href="https://www.latinxinai.org/icml-2020" target="_blank">Grateful to have been accepted as a mentee in the LXAI Mentoring Program at ICML 2020</a>.</li>
 <li>2020 Jun - <a href="https://roboticsconference.org/2020/" target="_blank">Glad to won a registration grant for the "Robotics: Science and Systems RSS 2020" conference</a>.</li>
-<li>2020 May - <a href="https://www.latinxinai.org/icml-2020#workshop-org" target="_blank">Selected as program committee member (reviewer) for the LXAI Workshop at the ICML 2020</a>.</li>
+<li>2020 May - <a href="https://www.latinxinai.org/icml-2020#workshop-org" target="_blank">Selected as program committee member (paper reviewer) for the LXAI Workshop at the ICML 2020</a>.</li>
 <li>2020 May - <a href="http://lxmls.it.pt/2020/" target="_blank">Selected to participate in the 10th Lisbon Machine Learning School LxMLS 2020, Portugal</a>.</li>
 <li>2020 Mar - Pleased to have been invited to be a paper reviewer at the IEEE INTERCON 2020 conference.</li>
 <li>2020 Mar - <a href="https://cmmrs.mpi-sws.org/" target="_blank">Accepted to participate in the Cornell, Maryland, Max Planck Pre-doctoral School CMMRS 2020</a>.</li>
@@ -224,7 +224,7 @@ I have participated in prestigious conferences related to AI, such as the NeurIP
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-04-30&nbsp;&nbsp;20:35 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-04-30&nbsp;&nbsp;20:36 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
